# tmux4ssh

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
prototype/: README.md  tmux_ssh.py  tmux_ssh_cp.py
src/tmux_ssh/: __init__.py  cli.py  client.py
tests/: __init__.py  conftest.py  test_integration.py  test_unit.py
